# autoresearch-mlops

./: .gitignore  README.md  Requirements.txt  bootstrap_autoresearch.py  pyproject.toml
autoresearch_mlops/: config.py  core.py  dashboard.py  data.py  eval.py  llm.py  main.py  memory.py  models.py  program.md  tracker.py
